Бахнул транзакции. Вывел catch DataIntegrityViolationException за пределы транзакций.